--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,26 @@
 version: "3"
 services:
+  hoteler-api:
+    build:
+      context: ./
+      dockerfile: Dockerfile
+    restart: always
+    ports:
+      - 8080:8080
+    networks:
+      - hoteler-network
+    links:
+      - db
+    depends_on:
+      - db
+
   db:
     image: postgres:12
+    container_name: db
     ports:
-    - 5432:5432
+      - 5432:5432
     volumes:
-    - hoteler-volume:/var/lib/postgresql/data
+      - hoteler-volume:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 123456
