--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,16 @@
 			<artifactId>graphql-java-tools</artifactId>
 			<version>5.2.3</version>
 		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.9.2</version>
+		</dependency>
 
 		<!--		<dependency>-->
 <!--			<groupId>org.flywaydb</groupId>-->
