--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,19 @@
 version: "3"
 services:
-#  hoteler-api:
-#    build:
-#      context: ./
-#      dockerfile: Dockerfile
-#    restart: always
-#    ports:
-#      - 8080:8080
-#    networks:
-#      - hoteler-network
+  hoteler-api:
+    build:
+      context: ./
+      dockerfile: Dockerfile
+    restart: always
+    ports:
+      - 8080:8080
+    networks:
+      - hoteler-network
+    env_file: .env
 #    links:
 #      - db
-#    depends_on:
-#      - db
+    depends_on:
+      - db
 
   db:
     image: postgres:12
@@ -25,6 +26,8 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 123456
       POSTGRES_DB: postgres
+    networks:
+      - hoteler-network
 
 volumes:
   hoteler-volume:
