--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -4,3 +4,5 @@ spring.datasource.password=123456
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 profile=docker
+
+secret.key=damingerdai
