--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,7 @@
             <plugin>
                 <groupId>org.flywaydb</groupId>
                 <artifactId>flyway-maven-plugin</artifactId>
+                <version>7.3.1</version>
                 <configuration>
                     <url>jdbc:postgresql://127.0.0.1:5432/postgres</url>
                     <user>postgres</user>
