--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,19 @@
 version: "3"
 services:
-#  hoteler-api:
-#    build:
-#      context: ./
-#      dockerfile: Dockerfile
-#    restart: always
-#    ports:
-#      - 8080:8080
-#    networks:
-#      - hoteler-network
-#    env_file: .env
-##    links:
-##      - db
-#    depends_on:
+  hoteler:
+    build:
+      context: ./
+      dockerfile: Dockerfile
+    restart: always
+    ports:
+      - 8080:8080
+    networks:
+      - hoteler-network
+    env_file: .env
+#    links:
 #      - db
+    depends_on:
+      - db
 
   db:
     image: postgres:13.1
