--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -6,3 +6,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 profile=docker
 
 secret.key=damingerdai
+
+server.compression.enabled: true
+server.compression.mime-types: application/json,application/xml,text/html,text/xml,text/plain,text/css,application/javascript
