feat: web security config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.password=123456
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.main.allow-bean-definition-overriding=true
 
+server.port=8443
+
 profile=local
 
 secret.key=damingerdai
