feat: 完成删除room的开发

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ secret.key=damingerdai
 
 server.compression.enabled: true
 server.compression.mime-types: application/json,application/xml,text/html,text/xml,text/plain,text/css,application/javascript
+
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
