--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,10 +27,18 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build
       - name: Cleanup Gradle Cache
+        if: matrix.os != 'windows-latest'
         # Remove some files from the Gradle cache, so they aren't cached by GitHub Actions.
         # Restoring these files from a GitHub Actions cache might cause problems for future builds.
         run: |
           rm -f ~/.gradle/caches/modules-2/modules-2.lock
           rm -f ~/.gradle/caches/modules-2/gc.properties
+      - name: Cleanup Gradle Cache for windows
+        if: matrix.os == 'windows-latest'
+        # Remove some files from the Gradle cache, so they aren't cached by GitHub Actions.
+        # Restoring these files from a GitHub Actions cache might cause problems for future builds.
+        run: |
+          rm -Force ~/.gradle/caches/modules-2/modules-2.lock
+          rm -Force ~/.gradle/caches/modules-2/gc.properties
       - name: Build with Gradle
         run: ./gradlew build
