--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,11 @@
             <artifactId>jaxb-runtime</artifactId>
             <version>3.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.4.0-b180830.0359</version>
+        </dependency
 
         <dependency>
             <groupId>org.flywaydb</groupId>
