--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,7 @@
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
             <version>2.4.0-b180830.0359</version>
-        </dependency
+        </dependency>
 
         <dependency>
             <groupId>org.flywaydb</groupId>
