build: build gradle配置文件使用jdk16

--- a/build.gradle
+++ b/build.gradle
@@ -44,3 +44,9 @@ test {
 bootJar {
 	mainClass = 'org.daming.hoteler.HotelerApplication'
 }
+
+java {
+  toolchain {
+    languageVersion = JavaLanguageVersion.of(16)
+  }
+}
