--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
       - name: Build with Gradle
-        run: ./gradlew build  --stacktrace --debug --scan
+        run: ./gradlew build  --stacktrace
       # - name: Cleanup Gradle Cache
         # if: matrix.os != 'windows-latest'
         # Remove some files from the Gradle cache, so they aren't cached by GitHub Actions.
