--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,8 @@ sourceCompatibility = '11'
 
 repositories {
 	mavenCentral()
-	maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+	// maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+	maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
 }
 
 dependencies {
@@ -45,8 +46,3 @@ bootJar {
 	mainClass = 'org.daming.hoteler.HotelerApplication'
 }
 
-java {
-  toolchain {
-    languageVersion = JavaLanguageVersion.of(16)
-  }
-}
