ci:  添加对jdk16和gradle7的支持(#26)
* ci: 使用jdk16进行测试

* build: build gradle配置文件使用jdk16

* build: upgrade sprint boot 2.5.0

* build: upgrade gradle 7.0.2

* ci: build gradle script need more detial

* ci: remove '--debug' and '--scan'

* ci: add jdk16 support

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        java-version: [11, 15]
+        java-version: [11, 16]
         os: [windows-latest, macos-latest, ubuntu-latest]
     steps:
       - uses: actions/checkout@v2
@@ -25,7 +25,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ./gradlew build  --stacktrace
       # - name: Cleanup Gradle Cache
         # if: matrix.os != 'windows-latest'
         # Remove some files from the Gradle cache, so they aren't cached by GitHub Actions.
