--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ profile=local
 
 secret.key=damingerdai
 
-server.compression.enabled: true
-server.compression.mime-types: application/json,application/xml,text/html,text/xml,text/plain,text/css,application/javascript
+server.compression.enabled=true
+server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain,text/css,application/javascript
 
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
