--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,14 +1,33 @@
 name: Java CI
 
-on: [push]
+on:
+  push:
+    branches: [master]
+  pull_request:
+    branches: [master]
 
 jobs:
-  build:
+  test:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        java-version: [11, 16]
-        os: [windows-latest, macos-latest, ubuntu-latest]
+        java-version: [11]
+        os: [ubuntu-latest]
+    services:
+      postgres:
+        image: postgres:13.1
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: 123456
+          POSTGRES_DB: postgres
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          # Maps tcp port 5432 on service container to the host
+          - 5432:5432
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK
@@ -25,18 +44,27 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
       - name: Build with Gradle
-        run: ./gradlew build  --stacktrace
-      # - name: Cleanup Gradle Cache
-        # if: matrix.os != 'windows-latest'
-        # Remove some files from the Gradle cache, so they aren't cached by GitHub Actions.
-        # Restoring these files from a GitHub Actions cache might cause problems for future builds.
-        # run: |
-          # rm -f ~/.gradle/caches/modules-2/modules-2.lock
-          # rm -f ~/.gradle/caches/modules-2/gc.properties
-      # - name: Cleanup Gradle Cache for windows
-        # if: matrix.os == 'windows-latest'
-        # Remove some files from the Gradle cache, so they aren't cached by GitHub Actions.
-        # Restoring these files from a GitHub Actions cache might cause problems for future builds.
-        # run: |
-          # rm -Force -Recurse ~/.gradle/caches/modules-2/modules-2.lock
-          # rm -Force -Recurse ~/.gradle/caches/modules-2/gc.properties
+        run: ./gradlew flywayMigrate && ./gradlew build
+  build:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        java-version: [ 11, 16 ]
+        os: [ windows-latest, macos-latest, ubuntu-latest ]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK
+        uses: actions/setup-java@v1
+        with:
+          java-version: ${{ matrix.java-version }}
+      - name: Cache Gradle packages
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+      - name: Build with Gradle
+        run: ./gradlew build
