--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,11 @@
+buildscript {
+	repositories {
+		maven{ url 'https://maven.aliyun.com/nexus/content/groups/public/'}
+	}
+}
+
 plugins {
+
 	id 'org.springframework.boot' version '2.5.1'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id "org.flywaydb.flyway" version "7.9.2"
@@ -10,6 +17,7 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
 repositories {
+	mavenLocal()
 	mavenCentral()
 	maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
 }
