--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 buildscript {
 	repositories {
+		mavenLocal()
+		mavenCentral()
 		maven{ url 'https://maven.aliyun.com/nexus/content/groups/public/'}
 	}
 }
