--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,7 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: ${{ matrix.go-version }}
+      - name: Run db migration
         run: cd migration && go build -o migrate migration.go && ./migrate up
         env:
           POSTGRES_HOST: postgres
