--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -2,6 +2,8 @@ spring.datasource.url=jdbc:postgresql://db:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=123456
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.flyway.enabled=false
+spring.flyway.baseline-on-migrate=true
 
 profile=docker
 
