--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.username=postgres
 spring.datasource.password=123456
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.main.allow-bean-definition-overriding=true
+spring.flyway.enabled=false
+spring.flyway.baseline-on-migrate=true
 
 server.port=8443
 
