test: make unit test pass

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,8 @@ spring:
   config:
     activate:
       on-profile: local
+main:
+  allow-bean-definition-overriding: true
 
 server:
   port: 8443
