--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -6,12 +6,11 @@ spring:
     driver-class-name: org.postgresql.Driver
   main:
     allow-bean-definition-overriding: true
-  flyway:
-    enabled: false
-    baseline-on-migrate: true
   config:
     activate:
       on-profile: test
+main:
+  allow-bean-definition-overriding: true
 
 server:
   port: 8080
