--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -12,6 +12,8 @@ spring:
   config:
     activate:
       on-profile: docker
+main:
+  allow-bean-definition-overriding: true
 
 server:
   port: 8080
