--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 	implementation 'org.glassfish.jaxb:jaxb-runtime:3.0.2'
 	implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
 	implementation 'com.github.ben-manes.caffeine:caffeine'
+	implementation 'org.yaml:snakeyaml:1.29'
 	implementation 'org.flywaydb:flyway-core:7.12.1'
 
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
