--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,8 @@ plugins {
 
 group = 'org.daming'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = '17'
+targetCompatibility = '17'
 
 repositories {
 	mavenLocal()
