--- a/build.gradle
+++ b/build.gradle
@@ -32,9 +32,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-cache'
 
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
-	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 
 	implementation 'org.postgresql:postgresql:42.3.1'
+	implementation 'org.springdoc:springdoc-openapi-ui:1.5.12'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	implementation 'commons-codec:commons-codec:1.15'
 	implementation 'org.apache.commons:commons-lang3:3.12.0'
@@ -72,12 +72,12 @@ jar {
 
 if (project.hasProperty('standalone')) {
 	sourceSets {
-		main {
+		main(({
 			resources {
-				exclude  '**/application*.yml'
-				exclude  '**/*.yml.back'
+				exclude '**/application*.yml'
+				exclude '**/*.yml.back'
 			}
-		}
+		} as String))
 	}
 	bootJar {
 		archiveName = "hoteler-standalone.jar"
