ci: 设置ci中postgres的sslmodle为disable

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,7 @@ jobs:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: 123456
           POSTGRES_DB: postgres
+          POSTGRES_SSLMODE: disable
       - name: Cache Gradle packages
         uses: actions/cache@v2
         with:
