chore: 更新openapi部分配置

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,5 +27,5 @@ logger:
 
 springdoc:
   packagesToScan: org.daming.hoteler.api.web
-  swagger-ui:
-    path: /swagger-ui.html
+#  swagger-ui:
+#    path: /swagger-ui.html
