--- a/migration/BUILD.bazel
+++ b/migration/BUILD.bazel
@@ -4,16 +4,40 @@ load("@bazel_gazelle//:def.bzl", "gazelle")
 # gazelle:prefix github.com/damingerdai/hoteler/migration
 gazelle(name = "gazelle")
 
+gazelle(
+    name = "gazelle-update-repos",
+    args = [
+        "-from_file=go.mod",
+        "-to_macro=deps.bzl%go_dependencies",
+        "-prune",
+    ],
+    command = "update-repos",
+)
+
 go_library(
     name = "migration_lib",
-    srcs = ["migration.go"],
+    srcs = [
+        "migration.go",
+    ],
     importpath = "github.com/damingerdai/hoteler/migration",
     visibility = ["//visibility:private"],
     deps = [
         "//internal/cmd",
-        "@com_github_golang_migrate_migrate_v4//database/postgres:go_default_library",
-        "@com_github_golang_migrate_migrate_v4//source/file:go_default_library",
-        "@com_github_joho_godotenv//autoload:go_default_library",
+        "@com_github_golang_migrate_migrate_v4//database/postgres",
+        "@com_github_golang_migrate_migrate_v4//source/file",
+        "@com_github_joho_godotenv//autoload",
+    ],
+)
+
+go_library(
+    name = "hoteler_lib",
+    srcs = [
+        "main.go",
+    ],
+    importpath = "github.com/damingerdai/hoteler/migration",
+    visibility = ["//visibility:private"],
+    deps = [
+        "//cmd",
     ],
 )
 
@@ -22,3 +46,10 @@ go_binary(
     embed = [":migration_lib"],
     visibility = ["//visibility:public"],
 )
+
+go_binary(
+    name = "hoteler",
+    embed = [":hoteler_lib"],
+    visibility = ["//visibility:public"],
+)
+
