--- a/migration/internal/cmd/BUILD.bazel
+++ b/migration/internal/cmd/BUILD.bazel
@@ -11,6 +11,6 @@ go_library(
     deps = [
         "//internal/files",
         "//internal/times",
-        "@com_github_golang_migrate_migrate_v4//:go_default_library",
+        "@com_github_golang_migrate_migrate_v4//:migrate",
     ],
 )
