--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,9 @@ dependencies {
 
 	implementation 'org.postgresql:postgresql:42.3.3'
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.6'
-	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 	implementation 'commons-codec:commons-codec:1.15'
 	implementation 'org.apache.commons:commons-lang3:3.12.0'
 	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.1'
