--- a/migration/cmd/BUILD.bazel
+++ b/migration/cmd/BUILD.bazel
@@ -10,7 +10,7 @@ go_library(
     importpath = "github.com/damingerdai/hoteler/migration/cmd",
     visibility = ["//visibility:public"],
     deps = [
-        "//internal/cmd",
+        "//pkg/cmd",
         "@com_github_spf13_cobra//:cobra",
     ],
 )
