build: bazel work

--- a/migration/pkg/cmd/BUILD.bazel
+++ b/migration/pkg/cmd/BUILD.bazel
@@ -4,12 +4,11 @@ go_library(
     name = "cmd",
     srcs = [
         "cmd.go",
-        "migrate.go",
-        "seed.go",
     ],
     importpath = "github.com/damingerdai/hoteler/migration/pkg/cmd",
     visibility = ["//:__subpackages__"],
     deps = [
+        "//internal/database",
         "//internal/files",
         "//internal/times",
         "@com_github_golang_migrate_migrate_v4//:migrate",
