--- a/migration/cmd/BUILD.bazel
+++ b/migration/cmd/BUILD.bazel
@@ -3,6 +3,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "cmd",
     srcs = [
+        "migrate.go",
         "root.go",
         "seed.go",
         "version.go",
