feat(migrate): migrate2命令开始使用

--- a/migration/BUILD.bazel
+++ b/migration/BUILD.bazel
@@ -17,6 +17,7 @@ gazelle(
 go_library(
     name = "migration_lib",
     srcs = [
+        "main.go",
         "migration.go",
     ],
     importpath = "github.com/damingerdai/hoteler/migration",
