--- a/migration/cmd/BUILD.bazel
+++ b/migration/cmd/BUILD.bazel
@@ -11,7 +11,9 @@ go_library(
     importpath = "github.com/damingerdai/hoteler/migration/cmd",
     visibility = ["//visibility:public"],
     deps = [
+        "//internal/database",
         "//pkg/cmd",
+        "//pkg/executor",
         "@com_github_spf13_cobra//:cobra",
     ],
 )
