build: 修复stadalone打包时没有引入xml文件导致日志配置不生效的问题

--- a/pom.xml
+++ b/pom.xml
@@ -211,6 +211,7 @@
                             <include>**/*.properties</include>
                             <include>**/*.txt</include>
                             <include>**/*.yml</include>
+                            <include>**/*.xml</include>
                             <include>db/**</include>
                             <include>static/**</include>
                         </includes>
