feat: migate2的up功能完成

--- a/migration/pkg/executor/BUILD.bazel
+++ b/migration/pkg/executor/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
         "//internal/files",
         "//internal/schema",
         "//internal/times",
+        "//internal/util",
         "@com_github_jackc_pgx_v4//pgxpool",
     ],
 )
