--- a/pom.xml
+++ b/pom.xml
@@ -195,7 +195,7 @@
                 <artifactId>flyway-maven-plugin</artifactId>
                 <version>8.5.10</version>
                 <configuration>
-                    <url>jdbc:postgresql://127.0.0.1:5432/postgres</url>
+                    <url>jdbc:postgresql://127.0.0.1:5432/hoteler</url>
                     <user>postgres</user>
                     <password>123456</password>
                 </configuration>
