ci: set microsoft java distribution

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,7 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
+          distribution: 'microsoft'
           java-version: ${{ matrix.java-version }}
       - name: Setup go
         uses: actions/setup-go@v3
@@ -72,6 +73,7 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
+          distribution: 'microsoft'
           java-version: ${{ matrix.java-version }}
       - name: Cache Gradle packages
         uses: actions/cache@v3
@@ -95,6 +97,7 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
+          distribution: 'microsoft'
           java-version: ${{ matrix.java-version }}
       - name: Cache Maven packages
         uses: actions/cache@v3
